test/tasty/neg/src-2/TestTrackedParam.check
TestTrackedParam_fail.scala:12: error: type mismatch;
 found   : tastytest.TrackedParam.C#T
 required: Int
  def test: Int = new F(y).x.t // error: just ignore tracked flag - so x is not refined.
                             ^
1 error
